[workaround] Annotation snippets now need to be enabled twice 🤦
As seen in (the aptly chosen DNS domain) https://ellie.wtf/notes/ingress-nginx-risky-annotations

--- a/ansible/roles/wordpress-namespace/tasks/nginx.yml
+++ b/ansible/roles/wordpress-namespace/tasks/nginx.yml
@@ -15,6 +15,7 @@
         namespace: "{{ inventory_namespace }}"
       data:
         allow-snippet-annotations: "true"
+        annotations-risk-level: Critical
         # Uncomment the next four lines to embug the nginx configuration
         # (see also similar comments elsewhere in the file):
         # nginx.tmpl: >-
