[fix] Add reverse-proxy into playbook

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -50,3 +50,12 @@
     K8S_AUTH_KUBECONFIG: "{{ k8s_auth_kubeconfig }}"
   roles:
     - role: roles/wordpress-namespace
+
+- name: WordPress reverseproxy
+  hosts: all_namespaces
+  gather_facts: no
+  vars_files: ansible-k8s-credentials.yml
+  environment:
+    K8S_AUTH_KUBECONFIG: "{{ k8s_auth_kubeconfig }}"
+  roles:
+    - role: roles/openshift-reverse-proxy
