--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -85,3 +85,20 @@
           <?php
           {{ wordpress_secret_response.content }}
   when: existing_wp_secret.resources | length == 0
+
+- name: Create Search Inside Secret
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      type: Opaque
+      metadata:
+        name: search-inside-secret
+        namespace: "{{ inventory_namespace }}"
+      data:
+        wp_api_token: "{{ _search_inside_wp_api_hashed_token | b64encode }}"
+  vars:
+    _search_inside_wp_api_credentials: "{{ search_inside_secrets.wp_api_credentials.username }}:{{ search_inside_secrets.wp_api_credentials.password }}"
+    _search_inside_wp_api_hashed_token: "{{ _search_inside_wp_api_credentials | password_hash_bcrypt(_iv) }}"
+    _iv: "Lnkai92hu9u8nNJUkhua82hGFafghjkhi"
