--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -99,6 +99,10 @@
       data:
         wp_api_token: "{{ _search_inside_wp_api_hashed_token | b64encode }}"
   vars:
-    _search_inside_wp_api_credentials: "{{ search_inside_secrets.wp_api_credentials.username }}:{{ search_inside_secrets.wp_api_credentials.password }}"
+    _search_inside_wp_api_credentials: >-
+      {{ search_inside_scrape.wp_api_credentials.username
+      }}:{{
+      search_inside_secrets.wp_api_credentials.password
+      | eyaml(search_inside_scrape.eyaml_keys }}
     _search_inside_wp_api_hashed_token: "{{ _search_inside_wp_api_credentials | password_hash_bcrypt(_iv) }}"
     _iv: "Lnkai92hu9u8nNJUkhua82hGFafghjkhi"
