[fix] typo, as per review

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -103,6 +103,6 @@
       {{ search_inside_scrape.wp_api_credentials.username
       }}:{{
       search_inside_secrets.wp_api_credentials.password
-      | eyaml(search_inside_scrape.eyaml_keys }}
+      | eyaml(search_inside_scrape.eyaml_keys) }}
     _search_inside_wp_api_hashed_token: "{{ _search_inside_wp_api_credentials | password_hash_bcrypt(_iv) }}"
     _iv: "Lnkai92hu9u8nNJUkhua82hGFafghjkhi"
