[style] Nominative form for Ansible task + fix typo

--- a/ansible/roles/wordpress-namespace/tasks/grafana.yml
+++ b/ansible/roles/wordpress-namespace/tasks/grafana.yml
@@ -1,7 +1,7 @@
 - tags: always
   include_vars: grafana-vars.yml
 
-- name: "Deploy the WordPress Gragana dashboards"
+- name: "WordPress Grafana dashboards"
   when:
   - inventory_openshift is defined
   - inventory_openshift.domain != "okd-test.fsd.team"  # Meh
