[feature] JSON log format

--- a/docker/apache-redirector/httpd.conf
+++ b/docker/apache-redirector/httpd.conf
@@ -34,6 +34,7 @@ LogLevel info
 </Files>
 
 <IfModule log_config_module>
-    LogFormat "%t %v:%p \"%{X-Forwarded-For}i\" %{Host}i %h %l %u \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
+    LogFormat "{ \"time\": \"%{%Y-%m-%d}tT%{%T}t.%{msec_frac}tZ\", \"remoteIP\": \"%{X-Forwarded-For}i\", \"hostfqdn\": \"%v\", \"host\": \"%{Host}i\", \"port\": \"%p\", \"clientIP\": \"%h\", \"request\": \"%r\", \"urlPath\": \"%U\", \"query\": \"%q\", \"method\": \"%m\", \"status\": \"%>s\", \"totalBytes\": \"%O\", \"userAgent\": \"%{User-agent}i\", \"referer\": \"%{Referer}i\" }" vhost_combined
+    ErrorLogFormat "{ \"time\": \"%{%Y-%m-%d}tT%{%T}t.%{msec_frac}tZ\", \"hostfqdn\": \"%v\", \"referer\": \"%{Referer}i\", \"error\": { \"requestid\": \"%-L\", \"connectionid\": \"%-{c}L\", \"module\": \"%-m\", \"level\": \"%-l\", \"statuscode\": \"%-E\", \"file\": \"%-F\", \"message\": \"%-M\", \"X-REQUEST-UUID\": \"%-{X-REQUEST-UUID}i\" }, \"connection\": { \"client\": { \"ip_port\": \"%-a\"}, \"peer\": { \"ip_port\": \"%-{c}a\" }, \"server\": { \"-ip_port\": \"%-A\" }, \"process\": { \"id\": \"%-{pid}P\", \"thread\": \"%-{tid}P\" } } }"
     CustomLog /proc/self/fd/1 vhost_combined
 </IfModule>
