[refactor]&[fix] the entry point control flow
Fixes https://go.epfl.ch/WPN-360 whence homepages for blog posts only
work in a single Polylang language.

Yes, it does. And yes, of course it took yet another half-day long
Xdebug session to pin down the lone `define( 'WP_USE_THEMES', true );`
in WordPress' stock `index.php`, which was being overlooked in the
previous (kludgy) control flow layout, as the culprit. In order to
avoid the team this kind of headaches, in the future, I am hereby
making the decision to rock the boat this late in the “product” cycle
and refactor the control flow back to the way WordPress intended,
complete with (albeit still phony) `wp-config.php`.

- Make `stub-wp-config.php` a first-class citizen of the source
tree, instead of a one-line wart in `Dockerfile`
- Remove the ornery `find -regextype egrep` business (I'm not sure who
wrote that, despite `git blame` blaming me — ChatGPT maybe?); replace
with good old shell globs
- Ensure that `wp-config.php` calls `wp-settings.php` and (for now)
nothing else. (I am still pondering calling
functions such as `\__entrypoint\setup_db()` etc, but for now I
haven't seen a need for that.)

Tested with

- “Normal” front-office page
- Blog pages home in both languages (viz. https://go.epfl.ch/WPN-360 )
- Back-office pages such as `/wp-admin/edit.php?post_type=page` and `/wp-admin/plugins.php`
- Page editor (i.e. `/wp-admin/post.php`), complete with `/wp-json` /
`DOING_AJAX` stuff as per that page's XHR calls

--- a/docker/wordpress-php/Dockerfile
+++ b/docker/wordpress-php/Dockerfile
@@ -34,16 +34,18 @@ RUN set -e -x; \
 
 COPY php.ini /etc/php/${PHP_VERSION}/fpm/conf.d/local.ini
 
-# Band-aid for running WordPress outside of its installation directory
-# nginx-entrypoint.php takes care of the setup legwork
-RUN set -e -x;                                                     \
-    for wp in $(find /wp/ -mindepth 1 -maxdepth 1 -type d          \
-                -regextype egrep -regex '.*/[0-9.]+');             \
-    do echo "<?php # This wp-config.php intentionally left blank"  \
-            > $wp/wp-config.php; done
-
 RUN mkdir -p /wp/nginx-entrypoint/
 COPY nginx-entrypoint.php /wp/nginx-entrypoint/nginx-entrypoint.php
+
+# WordPress insists on loading wp-config.php, but in our Web serving
+# workflow, all the setup work is handled by nginx-entrypoint.php:
+COPY stub-wp-config.php /wp/6/wp-config.php
+RUN set -e -x;                                                     \
+    for wp in /wp/6*; do                                       \
+      if [ ! -f "$wp/wp-config.php" ]; then                        \
+        cp /wp/6/wp-config.php "$wp/wp-config.php" ;               \
+      fi;                                                          \
+    done
 
 EXPOSE 8080 8443
 
