[hotfix] Don't pull our stuff out of Docker Hub
... At least the unimportant stuff — I guess as far as MariaDB itself
is concerned, we'll just wait for the next outage? 😜

Also we are going through anonymous.apps.t-ocp-its-01.xaas.epfl.ch
because the admission webhook won't let us mutate the `spec.metrics.exporter.imagePullSecrets`

--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -4,6 +4,7 @@
   with_items:
     - mariadb-vars.yml
     - s3-secrets-vars.yml
+    - ../../../vars/quay-vars.yml
 
 - name: 'MariaDBOperator/mariadb-operator'
   kubernetes.core.k8s:
@@ -69,6 +70,7 @@
         metrics:
           enabled: true
           exporter:
+            image: anonymous.apps.t-ocp-its-01.xaas.epfl.ch//svc0041/mysqld-exporter:v0.15.1
             resources:
               requests:
                 cpu: 50m
