[refactor]&[feature] The `default` ServiceAccount now can just pull.
This means that `MariaDB` can consume the authenticated Quay images.

--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -1,5 +1,20 @@
 ---
 
+- name: Pull secrets for the `default` ServiceAccount
+  include_tasks:
+    file: pull-secrets.yml
+    apply:
+      tags:
+      - wp
+      - wp.pull-secrets
+      - wp.pullsecrets
+      - wp.pull
+  tags:
+    - wp
+    - wp.pull-secrets
+    - wp.pullsecrets
+    - wp.pull
+
 - name: Storage
   include_tasks:
     file: storage.yml
