--- a/docker/wp-cron/Dockerfile
+++ b/docker/wp-cron/Dockerfile
@@ -12,17 +12,23 @@ RUN set -e -x; apt-get -qy update; \
     apt-get --no-install-recommends -qy install \
         curl \
         git \
+        less \
         mariadb-client \
         php-cli \
         php-mysql \
         python3 \
         python3-pip \
      && rm -rf /var/lib/apt/lists/*; # from 1.12GB to 869MB
-
+     
 RUN set -e -x; cd /usr/local/bin/ ; \
     curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" ; \
     chmod +x kubectl
 
+COPY ./requirements.txt .
+RUN pip3 install -r ./requirements.txt --break-system-packages
+
 # `wp-base` below means the image built from https://github.com/epfl-si/wp-ops/tree/WPN/docker/wp-base
 COPY --from=wp-base /wp /wp
 COPY --from=wp-base /usr/local/bin/wp /usr/local/bin/wp
+
+ADD wp-cron.py /
