--- a/ansible/roles/wordpress-namespace/tasks/wp-cron.yml
+++ b/ansible/roles/wordpress-namespace/tasks/wp-cron.yml
@@ -23,7 +23,12 @@
             serviceAccountName: wp-cron
             containers:
               - name: wp-cron
-                image: "quay-its.epfl.ch/svc0041/wp-cron:2025-012"
+                image: "quay-its.epfl.ch/svc0041/wp-cron:2025-013"
+                env:
+                  - name: K8S_NAMESPACE
+                    valueFrom:
+                      fieldRef:
+                        fieldPath: metadata.namespace
                 command:
                   - python3
                   - /wp-cron.py
