[fix] Must explicitly create `/wp/nginx-entrypoint.d`

--- a/docker/wordpress-php/Dockerfile
+++ b/docker/wordpress-php/Dockerfile
@@ -34,9 +34,9 @@ RUN set -e -x; \
 
 COPY php.ini /etc/php/${PHP_VERSION}/fpm/conf.d/local.ini
 
-RUN mkdir -p /wp/nginx-entrypoint/
+RUN mkdir -p /wp/nginx-entrypoint/ /wp/nginx-entrypoint.d/
 COPY nginx-entrypoint.php /wp/nginx-entrypoint/nginx-entrypoint.php
-COPY nginx-entrypoint.d /wp/
+COPY nginx-entrypoint.d/* /wp/nginx-entrypoint.d/
 
 # WordPress insists on loading wp-config.php, but in our Web serving
 # workflow, all the setup work is handled by nginx-entrypoint.php:
