[feature] `wpforms_license_phpserialized` secret key
This allows the operator to drop the knowledge on how to assemble
this.

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -31,6 +31,7 @@
       stringData:
         restauration_api_password: "{{ restauration.api_password | eyaml(eyaml_keys) }}"
         wpforms_license: "{{ wpforms.license_key | eyaml(eyaml_keys) }}"
+        wpforms_license_phpserialized: "{{ _wpforms_license_struct | php_serialize }}"
         saferpay_test_apiusername: "{{ saferpay.test.apiusername | eyaml(eyaml_keys) }}"
         saferpay_test_apipassword: "{{ saferpay.test.apipassword | eyaml(eyaml_keys) }}"
         saferpay_test_customerid: "{{ saferpay.test.customerid | eyaml(eyaml_keys) | string }}"
@@ -39,6 +40,14 @@
         saferpay_prod_apipassword: "{{ saferpay.prod.apipassword | eyaml(eyaml_keys) }}"
         saferpay_prod_customerid: "{{ saferpay.prod.customerid | eyaml(eyaml_keys) | string }}"
         saferpay_prod_terminalid: "{{ saferpay.prod.terminalid | eyaml(eyaml_keys) | string }}"
+
+  vars:
+     _wpforms_license_struct:
+        type: "elite"
+        key: "{{ wpforms.license_key | eyaml(eyaml_keys) }}"
+        is_expired: false
+        is_disabled: false
+        is_invalid: false
 
 - name: MariaDB operator backup / restore credentials
   kubernetes.core.k8s:
