--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -31,7 +31,7 @@
       stringData:
         restauration_api_password: "{{ restauration.api_password | eyaml(eyaml_keys) }}"
         wpforms_license: "{{ wpforms.license_key | eyaml(eyaml_keys) }}"
-        wpforms_license_phpserialized: "{{ _wpforms_license_struct | php_serialize }}"
+        wpforms_license_json: "{{ _wpforms_license_struct | to_json }}"
         saferpay_test_apiusername: "{{ saferpay.test.apiusername | eyaml(eyaml_keys) }}"
         saferpay_test_apipassword: "{{ saferpay.test.apipassword | eyaml(eyaml_keys) }}"
         saferpay_test_customerid: "{{ saferpay.test.customerid | eyaml(eyaml_keys) | string }}"
