[workaround] Remove CPU limit

--- a/ansible/roles/wordpress-namespace/tasks/wp-operator.yml
+++ b/ansible/roles/wordpress-namespace/tasks/wp-operator.yml
@@ -39,3 +39,15 @@
         EPFL_MIGRATION_KEYID: "{{ s3_epfl_migration_credentials.keyId }}"
         EPFL_MIGRATION_ACCESSSECRET: "{{ s3_epfl_migration_credentials.accessSecret }}"
         RESTIC_PASSWORD: "{{ s3_epfl_migration_credentials.resticPassword }}"
+
+- name: "Deployment/wp-operator: no CPU limit"
+  # Temporary band-aid until we get rid of that in the OLM metadata,
+  # and re-push properly:
+  kubernetes.core.k8s_json_patch:
+    api_version: apps/v1
+    kind: Deployment
+    name: wp-operator
+    namespace: "{{ inventory_namespace }}"
+    patch:
+     - op: remove
+       path: /spec/template/spec/containers/0/resources/limits/cpu
