--- a/ansible/roles/wordpress-builds/vars/tekton-vars.yml
+++ b/ansible/roles/wordpress-builds/vars/tekton-vars.yml
@@ -5,5 +5,9 @@ oc_cli_image: "{{ ansible_quay_hostname }}/{{ quay_organization }}/{{ oc_cli_ima
 
 
 wp_base_builder_service_account: wp-base-builder
+# Provisioned by the OpenShift operator for running as UID 0 and
+# CAP_SETFCAP (which we couldn't do ourselves); see
+# https://docs.redhat.com/en/documentation/openshift_container_platform/4.8/html/cicd/pipelines#about-taskrun_understanding-openshift-pipelines
+wp_base_builder_buildah_service_account: pipeline
 run_pipeline_wp_base_build: run-pipeline-wp-base-build
 pipeline_name: wp-base-build
