--- a/ansible/roles/wordpress-builds/vars/s3-vars.yml
+++ b/ansible/roles/wordpress-builds/vars/s3-vars.yml
@@ -1,2 +1,2 @@
 s3_build_credentials: >-
-  {{ lookup('file', '/keybase/team/epfl_wp_test/s3-assets-credentials.sh') | replace("=", ": ")  | from_yaml }}
+  {{ lookup('file', '/keybase/team/epfl_wp_test/s3-assets-credentials.sh') | regex_replace("^(.*?)=(.*)$", "\1: \2", multiline=True) | from_yaml }}
