[unfeature] Multiple versions in the same image
As discussed a few weeks ago, “durable” canaries (for any value of
“durable” of more than a few minutes) should be done “the RedHat way,“
using the A/B features built into the `Route` objects:

https://docs.okd.io/latest/applications/deployments/route-based-deployment-strategies.html

Ergo, we don't want `/wp/6` in the image anymore.

--- a/docker/wp-base/Dockerfile
+++ b/docker/wp-base/Dockerfile
@@ -53,6 +53,9 @@ RUN set -e -x; cd /tmp;                                                     \
         *)      /tmp/install-wordpress.sh /wp "$version" ;;                 \
     esac
 
+# TODO: remove this once all the Ingress objects have been rewritten.
+RUN ln -s . /wp/6
+
 RUN rm /tmp/*.patch* /tmp/*.sh /tmp/*.json
 
 ######################################################################
@@ -75,13 +78,6 @@ RUN set -e -x;   env; \
     cd /tmp/elements_build; \
     yarn; yarn build; \
     for wp in /wp/*/wp-content; do cp -a dist/ $wp/themes/wp-theme-2018/assets; done
-
-######################################################################
-# Symlinks in /wp
-######################################################################
-# We do that last for simplicity, at a small cost in build time
-COPY symlink-wp-versions.sh /tmp
-RUN sh /tmp/symlink-wp-versions.sh && rm /tmp/symlink-wp-versions.sh
 
 ######################################################################
 # Copy global error pages
